--- a/coursework/Views/Home/Index.cshtml
+++ b/coursework/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     </section>
     <div class="row">
         <section class="col-md-4" aria-labelledby="gettingStartedTitle">
-            <h2 id="gettingStartedTitle">Getting started</h2>
+            <h2 id="gettingStartedTitle">Добро пожаловать</h2>
             <p>ASP.NET Web API is a framework that makes it easy to build HTTP services that reach
             a broad range of clients, including browsers and mobile devices. ASP.NET Web API
             is an ideal platform for building RESTful applications on the .NET Framework.</p>
