Валидация на стороне клиента (Аутентификация через куки в браузере)

--- a/coursework/Views/MyAccount/Login.cshtml
+++ b/coursework/Views/MyAccount/Login.cshtml
@@ -12,12 +12,13 @@
         //если контроллер отправил сообщение (то есть оно не пустое)
         if (TempData["msg"]!=null)
         {
-            //то выводим это красным цветом
+            //то выводим это красивым алертом
             <script>Swal.fire({
                     icon: "error",
                     title: "Ошибка!",
                     text: "Неверные логин или пароль!"
                 });</script>
+            //то выводим это красным цветом
             @*<label style="color:red">@TempData["msg"]</label>*@
         }
     }
