--- a/coursework/Views/Roles/Edit.cshtml
+++ b/coursework/Views/Roles/Edit.cshtml
@@ -34,7 +34,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Вернуться назад", "Index")
 </div>
 
 @section Scripts {
