--- a/coursework/Views/Services/Details.cshtml
+++ b/coursework/Views/Services/Details.cshtml
@@ -46,5 +46,5 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.ServiceID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Вернуться назад", "Index")
 </p>
