--- a/coursework/Views/Clients/Create.cshtml
+++ b/coursework/Views/Clients/Create.cshtml
@@ -1,22 +1,22 @@
 ﻿@model coursework.Models.Clients
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Добавление нового клиента";
 }
 
-<h2>Create</h2>
+<h2>Добавление нового клиента</h2>
 
-
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
-        <h4>Clients</h4>
+        <h4>Клиенты</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
         <div class="form-group">
-            @Html.LabelFor(model => model.ClientID, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2" for="ClientID">Идентификатор клиента</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.ClientID, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ClientID, "", new { @class = "text-danger" })
@@ -24,7 +24,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.FullName, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2" for="FullName">ФИО</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.FullName, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.FullName, "", new { @class = "text-danger" })
@@ -32,7 +32,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ContactInfo, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2" for="ContactInfo">Контактная информация</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.ContactInfo, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ContactInfo, "", new { @class = "text-danger" })
@@ -41,14 +41,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Добавить нового клиента" class="btn btn-primary" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Вернуться назад", "Index")
 </div>
 
 @section Scripts {
