--- a/coursework/Views/Clients/Delete.cshtml
+++ b/coursework/Views/Clients/Delete.cshtml
@@ -1,18 +1,18 @@
 ﻿@model coursework.Models.Clients
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Удаление клиента";
 }
 
-<h2>Delete</h2>
+<h2>Удаление</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Вы действительно хотите удалить клиента из базы данных?</h3>
 <div>
-    <h4>Clients</h4>
+    <h4>Клиенты</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.FullName)
+            ФИО
         </dt>
 
         <dd>
@@ -20,7 +20,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ContactInfo)
+            Контактная информация
         </dt>
 
         <dd>
@@ -33,8 +33,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Удалить" class="btn btn-danger" /> |
+            @Html.ActionLink("Вернуться назад", "Index")
         </div>
     }
 </div>
