--- a/coursework/Views/Clients/Details.cshtml
+++ b/coursework/Views/Clients/Details.cshtml
@@ -1,17 +1,17 @@
 ﻿@model coursework.Models.Clients
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Просмотр клиента";
 }
 
-<h2>Details</h2>
+<h2>Детали</h2>
 
 <div>
-    <h4>Clients</h4>
+    <h4>Клиенты</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.FullName)
+            ФИО
         </dt>
 
         <dd>
@@ -19,7 +19,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ContactInfo)
+            Контактная информация
         </dt>
 
         <dd>
@@ -29,6 +29,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ClientID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Редактировать", "Edit", new { id = Model.ClientID }) |
+    @Html.ActionLink("Вернуться назад", "Index")
 </p>
