--- a/coursework/Views/Employees/Details.cshtml
+++ b/coursework/Views/Employees/Details.cshtml
@@ -38,5 +38,5 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.EmployeeID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Вернуться назад", "Index")
 </p>
