--- a/coursework/Views/Requests/Details.cshtml
+++ b/coursework/Views/Requests/Details.cshtml
@@ -62,5 +62,5 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.RequestID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Вернуться назад", "Index")
 </p>
