--- a/coursework/Views/Requests/Edit.cshtml
+++ b/coursework/Views/Requests/Edit.cshtml
@@ -74,7 +74,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Вернуться назад", "Index")
 </div>
 
 @section Scripts {
