--- a/coursework/Views/Roles/Index.cshtml
+++ b/coursework/Views/Roles/Index.cshtml
@@ -23,9 +23,9 @@
             @Html.DisplayFor(modelItem => item.Name)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Редактирование", "Edit", new { id = item.Id }) |
+            @Html.ActionLink("Просмотр", "Details", new { id = item.Id }) |
+            @Html.ActionLink("Удаление", "Delete", new { id = item.Id })
         </td>
     </tr>
 }
