--- a/coursework/Views/ServiceCategories/Create.cshtml
+++ b/coursework/Views/ServiceCategories/Create.cshtml
@@ -48,7 +48,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Вернуться назад", "Index")
 </div>
 
 @section Scripts {
