--- a/coursework/Views/ServiceCategories/Details.cshtml
+++ b/coursework/Views/ServiceCategories/Details.cshtml
@@ -30,5 +30,5 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.CategoryID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Вернуться назад", "Index")
 </p>
