--- a/coursework/Views/Shared/_Layout.cshtml
+++ b/coursework/Views/Shared/_Layout.cshtml
@@ -20,8 +20,22 @@
             </button>
             <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
-                    <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, new { @class = "nav-link" })</li>
+                    @{
+                        try
+                        {
+                            //если пользователь - админ, то
+                            if (Session["RoleId"] != null && Session["RoleId"].ToString() == "1")
+                            {
+                                //показываем админ панель и логи
+                                <li>@Html.ActionLink("Управление пользователями", "Index", "Administration", new { area = "" }, new { @class = "nav-link" })</li>
+                                <li>@Html.ActionLink("Логи", "Index", "Logs", new { area = "" }, new { @class = "nav-link" })</li>
+                            }
+                        }
+                        catch (Exception)
+                        {
+                            throw;
+                        }
+                    }
                 </ul>
                 <ul class="navbar-nav pull-right">
                     @{
@@ -48,7 +62,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Справочник службы быта</p>
         </footer>
     </div>
 
