Добавлена таблица-журнал, которая содержит информацию о пользователе и его входе в систему (Логи). Добавлена таблица для должностей работников. Фронт полностью переведен на русский

--- a/coursework/Views/Home/Index.cshtml
+++ b/coursework/Views/Home/Index.cshtml
@@ -10,6 +10,7 @@
             <p>Здесь хранятся таблицы к базе данных, чтобы можно было проще управлять ими (создавать/редактировать/удалять записи - CRUD).</p>
             <p><a class="btn btn-outline-dark" href="../Clients/Index">Клиенты &raquo;</a></p>
             <p><a class="btn btn-outline-dark" href="../Employees/Index">Работники &raquo;</a></p>
+            <p><a class="btn btn-outline-dark" href="../Positions/Index">Должности &raquo;</a></p>
             <p><a class="btn btn-outline-dark" href="../Requests/Index">Заявки &raquo;</a></p>
             <p><a class="btn btn-outline-dark" href="../Services/Index">Услуги &raquo;</a></p>
             <p><a class="btn btn-outline-dark" href="../ServiceCategories/Index">Категории услуг &raquo;</a></p>
