--- a/coursework/Views/Positions/Edit.cshtml
+++ b/coursework/Views/Positions/Edit.cshtml
@@ -1,29 +1,31 @@
-﻿@model coursework.Models.Roles
+﻿@model coursework.Models.Positions
 
 @{
-    ViewBag.Title = "Добавить";
+    ViewBag.Title = "Редактирование";
 }
 
-<h2>Добавить</h2>
+<h2>Редактирование</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Роль</h4>
+        <h4>Должность</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.Id)
+
         <div class="form-group">
-            <label class="control-label col-md-2" for="Name">Название</label>
+            <label class="control-label col-md-2" for="Title">Название должности</label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            <label class="control-label col-md-2" for="Description">Описание</label>
+            <label class="control-label col-md-2" for="Description">Описание должности</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
@@ -32,7 +34,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Добавить" class="btn btn-primary" />
+                <input type="submit" value="Сохранить изменения" class="btn btn-warning" />
             </div>
         </div>
     </div>
