--- a/coursework/Views/Requests/Index.cshtml
+++ b/coursework/Views/Requests/Index.cshtml
@@ -1,48 +1,39 @@
 ﻿@model IEnumerable<coursework.Models.Requests>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Заявки";
 }
 
-<h2>Index</h2>
+<h2>Заявки</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Добавить новую запись", "Create")
 </p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Clients.FullName)
+            Дата открытия заявки
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Employees.FullName)
+            Статус заявки
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Services.Name)
+            Описание
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.OpenDate)
+            Клиент
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Status)
+            Услуга
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Description)
+            Работник
         </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Clients.FullName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Employees.FullName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Services.Name)
-        </td>
         <td>
             @Html.DisplayFor(modelItem => item.OpenDate)
         </td>
@@ -53,9 +44,18 @@
             @Html.DisplayFor(modelItem => item.Description)
         </td>
         <td>
-            @Html.ActionLink("Редактирование", "Edit", new { id = item.RequestID }) |
+            @Html.DisplayFor(modelItem => item.Clients.LastName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Services.Name)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Employees.LastName)
+        </td>
+        <td>
+            @Html.ActionLink("Редактировать", "Edit", new { id = item.RequestID }) |
             @Html.ActionLink("Просмотр", "Details", new { id = item.RequestID }) |
-            @Html.ActionLink("Удаление", "Delete", new { id = item.RequestID })
+            @Html.ActionLink("Удалить", "Delete", new { id = item.RequestID })
         </td>
     </tr>
 }
