--- a/coursework/Views/Shared/_Layout.cshtml
+++ b/coursework/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                             {
                                 //показываем админ панель и логи
                                 <li>@Html.ActionLink("Управление пользователями", "Index", "Administration", new { area = "" }, new { @class = "nav-link" })</li>
-                                <li>@Html.ActionLink("Логи", "Index", "Logs", new { area = "" }, new { @class = "nav-link" })</li>
+                                <li>@Html.ActionLink("Логи", "Index", "LoginLogs", new { area = "" }, new { @class = "nav-link" })</li>
                             }
                         }
                         catch (Exception)
