--- a/coursework/Views/Clients/Delete.cshtml
+++ b/coursework/Views/Clients/Delete.cshtml
@@ -1,22 +1,38 @@
 ﻿@model coursework.Models.Clients
 
 @{
-    ViewBag.Title = "Удаление клиента";
+    ViewBag.Title = "Удалить";
 }
 
-<h2>Удаление</h2>
+<h2>Удалить</h2>
 
-<h3>Вы действительно хотите удалить клиента из базы данных?</h3>
+<h3>Вы действительно хотите удалить это?</h3>
 <div>
-    <h4>Клиенты</h4>
+    <h4>Клиент</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            ФИО
+            Фамилия клиента
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.FullName)
+            @Html.DisplayFor(model => model.LastName)
+        </dd>
+
+        <dt>
+            Имя клиента
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.FirstName)
+        </dd>
+
+        <dt>
+            Отчество клиента
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Patronymic)
         </dd>
 
         <dt>
