--- a/coursework/Views/Clients/Details.cshtml
+++ b/coursework/Views/Clients/Details.cshtml
@@ -1,21 +1,37 @@
 ﻿@model coursework.Models.Clients
 
 @{
-    ViewBag.Title = "Просмотр клиента";
+    ViewBag.Title = "Просмотр";
 }
 
-<h2>Детали</h2>
+<h2>Просмотр</h2>
 
 <div>
-    <h4>Клиенты</h4>
+    <h4>Клиент</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            ФИО
+            Фамилия клиента
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.FullName)
+            @Html.DisplayFor(model => model.LastName)
+        </dd>
+
+        <dt>
+            Имя клиента
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.FirstName)
+        </dd>
+
+        <dt>
+            Отчество клиента
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Patronymic)
         </dd>
 
         <dt>
