--- a/coursework/Views/Clients/Index.cshtml
+++ b/coursework/Views/Clients/Index.cshtml
@@ -7,12 +7,18 @@
 <h2>Клиенты</h2>
 
 <p>
-    @Html.ActionLink("Добавить нового клиента", "Create")
+    @Html.ActionLink("Добавить новую запись", "Create")
 </p>
 <table class="table">
     <tr>
         <th>
-            ФИО
+            Фамилия клиента
+        </th>
+        <th>
+            Имя клиента
+        </th>
+        <th>
+            Отчество клиента
         </th>
         <th>
             Контактная информация
@@ -23,15 +29,21 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.FullName)
+            @Html.DisplayFor(modelItem => item.LastName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.FirstName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Patronymic)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.ContactInfo)
         </td>
         <td>
-            @Html.ActionLink("Редактирование", "Edit", new { id=item.ClientID }) |
+            @Html.ActionLink("Редактировать", "Edit", new { id=item.ClientID }) |
             @Html.ActionLink("Просмотр", "Details", new { id=item.ClientID }) |
-            @Html.ActionLink("Удаление", "Delete", new { id=item.ClientID })
+            @Html.ActionLink("Удалить", "Delete", new { id=item.ClientID })
         </td>
     </tr>
 }
