--- a/coursework/Views/Employees/Delete.cshtml
+++ b/coursework/Views/Employees/Delete.cshtml
@@ -1,34 +1,50 @@
 ﻿@model coursework.Models.Employees
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Удалить";
 }
 
-<h2>Delete</h2>
+<h2>Удалить</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Вы действительно хотите удалить это?</h3>
 <div>
-    <h4>Employees</h4>
+    <h4>Работник</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.FullName)
+            Фамилия работника
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.FullName)
+            @Html.DisplayFor(model => model.LastName)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Position)
+            Имя работника
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Position)
+            @Html.DisplayFor(model => model.FirstName)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Salary)
+            Отчество работника
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Patronymic)
+        </dd>
+
+        <dt>
+            Должность
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Positions.Title)
+        </dd>
+
+        <dt>
+            Зарплата
         </dt>
 
         <dd>
@@ -41,7 +57,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Удалить" class="btn btn-danger" /> |
             @Html.ActionLink("Вернуться назад", "Index")
         </div>
     }
