--- a/coursework/Views/Employees/Details.cshtml
+++ b/coursework/Views/Employees/Details.cshtml
@@ -1,33 +1,49 @@
 ﻿@model coursework.Models.Employees
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Просмотр";
 }
 
-<h2>Details</h2>
+<h2>Просмотр</h2>
 
 <div>
-    <h4>Employees</h4>
+    <h4>Работник</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.FullName)
+            Фамилия работника
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.FullName)
+            @Html.DisplayFor(model => model.LastName)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Position)
+            Имя работника
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Position)
+            @Html.DisplayFor(model => model.FirstName)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Salary)
+            Отчество работника
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Patronymic)
+        </dd>
+
+        <dt>
+            Должность
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Positions.Title)
+        </dd>
+
+        <dt>
+            Зарплата
         </dt>
 
         <dd>
@@ -37,6 +53,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.EmployeeID }) |
+    @Html.ActionLink("Редактировать", "Edit", new { id = Model.EmployeeID }) |
     @Html.ActionLink("Вернуться назад", "Index")
 </p>
