--- a/coursework/Views/Employees/Index.cshtml
+++ b/coursework/Views/Employees/Index.cshtml
@@ -1,24 +1,30 @@
 ﻿@model IEnumerable<coursework.Models.Employees>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Работники";
 }
 
-<h2>Index</h2>
+<h2>Работники</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Добавить новую запись", "Create")
 </p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.FullName)
+            Фамилия работника
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Position)
+            Имя работника
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Salary)
+            Отчество работника
+        </th>
+        <th>
+            Должность
+        </th>
+        <th>
+            Зарплата
         </th>
         <th></th>
     </tr>
@@ -26,18 +32,24 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.FullName)
+            @Html.DisplayFor(modelItem => item.LastName)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Position)
+            @Html.DisplayFor(modelItem => item.FirstName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Patronymic)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Positions.Title)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Salary)
         </td>
         <td>
-            @Html.ActionLink("Редактирование", "Edit", new { id = item.EmployeeID }) |
+            @Html.ActionLink("Редактировать", "Edit", new { id = item.EmployeeID }) |
             @Html.ActionLink("Просмотр", "Details", new { id = item.EmployeeID }) |
-            @Html.ActionLink("Удаление", "Delete", new { id = item.EmployeeID })
+            @Html.ActionLink("Удалить", "Delete", new { id = item.EmployeeID })
         </td>
     </tr>
 }
