--- a/coursework/Views/Positions/Create.cshtml
+++ b/coursework/Views/Positions/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model coursework.Models.Roles
+﻿@model coursework.Models.Positions
 
 @{
     ViewBag.Title = "Добавить";
@@ -11,19 +11,19 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Роль</h4>
+        <h4>Должность</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            <label class="control-label col-md-2" for="Name">Название</label>
+            <label class="control-label col-md-2" for="Title">Название должности</label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            <label class="control-label col-md-2" for="Description">Описание</label>
+            <label class="control-label col-md-2" for="Description">Описание должности</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
