--- a/coursework/Views/Positions/Delete.cshtml
+++ b/coursework/Views/Positions/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model coursework.Models.Services
+﻿@model coursework.Models.Positions
 
 @{
     ViewBag.Title = "Удалить";
@@ -8,39 +8,23 @@
 
 <h3>Вы действительно хотите удалить это?</h3>
 <div>
-    <h4>Услуга</h4>
+    <h4>Должность</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            Название
+            Название должности
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.Title)
         </dd>
 
         <dt>
-            Описание
+            Описание должности
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.Description)
-        </dd>
-
-        <dt>
-            Цена
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Price)
-        </dd>
-
-        <dt>
-            Категория
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ServiceCategories.Name)
         </dd>
 
     </dl>
