--- a/coursework/Views/Requests/Delete.cshtml
+++ b/coursework/Views/Requests/Delete.cshtml
@@ -1,42 +1,18 @@
 ﻿@model coursework.Models.Requests
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Удалить";
 }
 
-<h2>Delete</h2>
+<h2>Удалить</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Вы действительно хотите удалить это?</h3>
 <div>
-    <h4>Requests</h4>
+    <h4>Заявка</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Clients.FullName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Clients.FullName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Employees.FullName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Employees.FullName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Services.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Services.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.OpenDate)
+            Дата открытия заявки
         </dt>
 
         <dd>
@@ -44,7 +20,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Status)
+            Статус заявки
         </dt>
 
         <dd>
@@ -52,11 +28,35 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Description)
+            Описание
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.Description)
+        </dd>
+
+        <dt>
+            Клиент
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Clients.LastName)
+        </dd>
+
+        <dt>
+            Услуга
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Services.Name)
+        </dd>
+
+        <dt>
+            Работник
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Employees.LastName)
         </dd>
 
     </dl>
@@ -65,7 +65,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Удалить" class="btn btn-danger" /> |
             @Html.ActionLink("Вернуться назад", "Index")
         </div>
     }
