--- a/coursework/Views/Roles/Details.cshtml
+++ b/coursework/Views/Roles/Details.cshtml
@@ -1,26 +1,34 @@
 ﻿@model coursework.Models.Roles
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Просмотр";
 }
 
-<h2>Details</h2>
+<h2>Просмотр</h2>
 
 <div>
-    <h4>Roles</h4>
+    <h4>Роль</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
+            Название
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.Name)
         </dd>
 
+        <dt>
+            Описание
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Description)
+        </dd>
+
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Редактировать", "Edit", new { id = Model.Id }) |
     @Html.ActionLink("Вернуться назад", "Index")
 </p>
