--- a/coursework/Views/Users/Delete.cshtml
+++ b/coursework/Views/Users/Delete.cshtml
@@ -1,26 +1,18 @@
 ﻿@model coursework.Models.Users
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Удалить";
 }
 
-<h2>Delete</h2>
+<h2>Удалить</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Вы действительно хотите удалить это?</h3>
 <div>
-    <h4>Users</h4>
+    <h4>Пользователь</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Roles.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Roles.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Username)
+            Логин
         </dt>
 
         <dd>
@@ -28,11 +20,43 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Password)
+            Пароль
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.Password)
+        </dd>
+
+        <dt>
+            Роль
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Roles.Name)
+        </dd>
+
+        <dt>
+            Фамилия
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.LastName)
+        </dd>
+
+        <dt>
+            Имя
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.FirstName)
+        </dd>
+
+        <dt>
+            Отчество
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Patronymic)
         </dd>
 
     </dl>
@@ -41,7 +65,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Удалить" class="btn btn-danger" /> |
             @Html.ActionLink("Вернуться назад", "Index")
         </div>
     }
