--- a/coursework/Views/Users/Index.cshtml
+++ b/coursework/Views/Users/Index.cshtml
@@ -1,33 +1,40 @@
 ﻿@model IEnumerable<coursework.Models.Users>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Пользователи";
 }
 
-<h2>Index</h2>
+<h2>Пользователи</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Добавить новую запись", "Create")
 </p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Roles.Name)
+            Логин
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Username)
+            Пароль
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Password)
+            Роль
+        </th>
+        <th>
+            Фамилия
+        </th>
+        <th>
+            Имя
+        </th>
+        <th>
+            Отчество
         </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Roles.Name)
-        </td>
+
         <td>
             @Html.DisplayFor(modelItem => item.Username)
         </td>
@@ -35,9 +42,21 @@
             @Html.DisplayFor(modelItem => item.Password)
         </td>
         <td>
-            @Html.ActionLink("Редактирование", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Просмотр", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Удаление", "Delete", new { id=item.Id })
+            @Html.DisplayFor(modelItem => item.Roles.Name)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.LastName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.FirstName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Patronymic)
+        </td>
+        <td>
+            @Html.ActionLink("Редактировать", "Edit", new { id = item.Id }) |
+            @Html.ActionLink("Просмотр", "Details", new { id = item.Id }) |
+            @Html.ActionLink("Удалить", "Delete", new { id = item.Id })
         </td>
     </tr>
 }
